deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ledger-api
  namespace: payments
  labels:
    app: ledger-api

spec:
  replicas: 3

  selector:
    matchLabels:
      app: ledger-api

  template:
    metadata:
      labels:
        app: ledger-api

    spec:
      serviceAccountName: ledger-sa

      securityContext:
        seccompProfile:
          type: RuntimeDefault

      containers:

      - name: ledger-api
        image: ledger-api:v1
        imagePullPolicy: IfNotPresent

        ports:
        - containerPort: 8080

        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"

          limits:
            cpu: "500m"
            memory: "256Mi"

        securityContext:
          runAsNonRoot: true
          runAsUser: 10001
          runAsGroup: 10001
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true

          capabilities:
            drop:
            - ALL

        livenessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 10

        readinessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 5
